<resources>
    <string name="app_name">낫투두</string>
    <string name="yes_eng">yes</string>
    <string name="no_eng">no</string>
    <string name="section">section</string>
    <string name="preference_file_name">kr.co.nottodo.PREFERENCE_FILE</string>
    <string name="menu_main_home">홈</string>
    <string name="menu_main_calendar">캘린더</string>
    <string name="menu_main_my_page">마이 페이지</string>
    <string name="home_empty_list">새로운 낫투두를 추가하고\n목표 달성을 위한 환경을 만들어보세요!</string>
    <string name="home_today_month">2023년 1월</string>
    <string name="home_item_list_situation">밥 먹을 때</string>
    <string name="home_item_list_natodo">배민 vip 탈출하기</string>
    <string name="home_modal_edit">편집</string>
    <string name="home_dialog_statics">%1$d회\n달성</string>
    <string name="home_dialog_do_action">실천 행동</string>
    <string name="home_dialog_do_action_description">배달의 민족 어플 삭제하기\n주 1회 마트에서 장보기\n가계부 쓰기</string>
    <string name="home_dialog_goal">목표</string>
    <string name="home_dialog_goal_description">불필요한 지출 줄이기</string>
    <string name="home_dialog_do_another">다른 날도 할래요</string>
    <string name="home_dialog_add_day">날짜 선택</string>
    <string name="home_dialog_delete_btn">삭제하기</string>
    <string name="home_bottom_action_null">구체적인 실천 방법을 추가한\n유저의 성공률이 약 10% 더 높아요:)</string>
    <string name="home_bottom_goal_null">목표만큼 강력한 동기는 없어요!\n무엇을 위해 낫투두를 도전하시나요?</string>
    <string name="home_calendar_todo_description">*달성 가능한 계획을 위해 다가올 일주일만 선택할 수 있어요</string>
    <string name="home_calendar_select_done">완료</string>
    <string name="home_delete_answer">삭제하시겠습니까?</string>
    <string name="home_nottodo_delete_warning_description">한 번 삭제하면 되돌릴 수 없어요.</string>
    <string name="view_home">view_home</string>
    <string name="click_return_today">click_return_today</string>
    <string name="click_weekly_date">click_weekly_date</string>
    <string name="complete_check_mission">complete_check_mission</string>
    <string name="complete_uncheck_mission">complete_uncheck_mission</string>
    <string name="click_edit_mission">click_edit_mission</string>
    <string name="complete_delete_mission">complete_delete_mission</string>
    <string name="click_delete_mission">click_delete_mission</string>
    <string name="click_push_noti">click_push_noti</string>
    <string name="click_push_noti_value">개인화1</string>
    <string name="click_push_noti_key">pushnoti</string>
    <string name="appear_detail_mission">appear_detail_mission</string>
    <string name="close_detail_mission">close_detail_mission</string>
    <string name="appear_another_day_modal">appear_another_day_modal</string>
    <string name="close_another_day_modal">close_another_day_modal</string>
    <string name="complete_add_mission_another_day">complete_add_mission_another_day</string>
    <string name="view_accomplish">view_accomplish</string>
    <string name="appear_daily_mission_modal">appear_daily_mission_modal</string>
    <string name="close_daily_mission_modal">close_daily_mission_modal</string>
    <string name="onboarding">onboarding</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addition_input">입력하세요…</string>
    <string name="addition_choice">*선택</string>
    <string name="today">오늘</string>
    <string name="tomorrow">내일</string>
    <string name="other_days">그 외 %d일</string>
    <string name="achieve_achieve">성취</string>
    <string name="achieve_description">남겨주신 피드백으로\n새로운 기능을 업데이트 할 예정이에요 :)</string>
    <string name="achieve_dialog_noToDo">등록된 낫투두가 없습니다.</string>
    <string name="total_add_mission">total_add_mission</string>
    <string name="channel_id">kr.co.nottodo.channel</string>
    <string name="channel_name">낫투두 알림</string>
    <string name="channel_desc">낫투두 알림을 위한 채널</string>
    <string name="version">버전 정보 1.0.2</string>
    <string name="withdrawal_kor_underline"><u>회원탈퇴</u></string>
    <string name="terms_of_use"><u>이용약관</u></string>
    <string name="privacy_policy"><u>개인정보 처리방침</u></string>
    <string name="url_terms_of_use">https://teamnottodo.notion.site/0c3c7c02857b46e1b16307ce7a8f6ca9?pvs=4</string>
    <string name="url_privacy_policy">https://teamnottodo.notion.site/5af34df7da3649fc941312c5f533c1eb</string>
    <string name="and">및</string>
    <string name="wanna_start">시작할래요!</string>
    <string name="duplicate_nottodo">이미 같은 내용이 있어요!\n낫투두 혹은 날짜를 변경하세요.</string>
    <string name="three_nottodo">낫투두는 하루 최대 3개 추가할 수 있어요.\n꼭 개선할 것에만 집중해봐요:)</string>
    <string name="success_save_not_todo">낫투두 다른 날짜에 추가 성공</string>
    <string name="google_sign_in_later">구글 로그인은 추후 업데이트 예정입니다</string>
    <string name="logout">로그아웃</string>
    <string name="you_can_not_sync_history">로그아웃을 하면\n다른 기기와 낫투두 기록을 연동하지 못해요.</string>
    <string name="do_you_want_to_logout">로그아웃 하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="ok">확정</string>
    <string name="view_signin">view_signin</string>
    <string name="click_signin">click_signin</string>
    <string name="provider">provider</string>
    <string name="kakao">kakao</string>
    <string name="complete_signin">complete_signin</string>
    <string name="view_onboarding_2">view_onboarding_2</string>
    <string name="click_onboarding_start">click_onboarding_start</string>
    <string name="click_onboarding_next_2">click_onboarding_next_2</string>
    <string name="onboard_select">onboard_select</string>
    <string name="view_onboarding_3">view_onboarding_3</string>
    <string name="click_onboarding_next_3">click_onboarding_next_3</string>
    <string name="view_onboarding_4">view_onboarding_4</string>
    <string name="click_onboarding_next_4">click_onboarding_next_4</string>
    <string name="view_onboarding_5">view_onboarding_5</string>
    <string name="click_onboarding_next_5">click_onboarding_next_5</string>
    <string name="view_my_info">view_my_info</string>
    <string name="click_my_info">click_my_info</string>
    <string name="url_guide">https://teamnottodo.notion.site/f35a7f2d6d5c4b33b4d0949f6077e6cd</string>
    <string name="url_faq">https://teamnottodo.notion.site/a6ef7036bde24e289e576ace099f39dc</string>
    <string name="url_notice">https://teamnottodo.notion.site/a5dbb310ec1d43baae02b7e9bf0b3411</string>
    <string name="url_contact">http://pf.kakao.com/_fUIQxj/chat</string>
    <string name="url_polices">https://teamnottodo.notion.site/81594da775614d23900cdb2475eadb73</string>
    <string name="url_feedback">https://forms.gle/xKq4oV8u7TQawKtE6</string>
    <string name="click_guide">click_guide</string>
    <string name="click_faq">click_faq</string>
    <string name="click_notice">click_notice</string>
    <string name="click_suggestion">click_suggestion</string>
    <string name="click_question">click_question</string>
    <string name="click_terms">click_terms</string>
    <string name="click_opensource">click_opensource</string>
    <string name="no_email">연동된 이메일 정보가 없습니다.</string>
    <string name="no_name">익명의 도전자</string>
    <string name="view_account_info">view_account_info</string>
    <string name="appear_logout_modal">appear_logout_modal</string>
    <string name="complete_logout">complete_logout</string>
    <string name="complete_push_on">complete_push_on</string>
    <string name="complete_push_off">complete_push_off</string>
    <string name="appear_withdrawal_modal">appear_withdrawal_modal</string>
    <string name="complete_withdrawal">complete_withdrawal</string>
    <string name="view_recommend_mission">view_recommend_mission</string>
    <string name="click_self_create_mission">click_self_create_mission</string>
    <string name="click_recommend_mission">click_recommend_mission</string>
    <string name="situation">situation</string>
    <string name="title">title</string>
    <string name="view_recommend_mission_detail">view_recommend_mission_detail</string>
    <string name="click_self_create_action">click_self_create_action</string>
    <string name="click_create_recommend_mission">click_create_recommend_mission</string>
    <string name="action">action</string>
    <string name="view_create_mission">view_create_mission</string>
    <string name="click_mission_history">click_mission_history</string>
    <string name="click_recommend_situation">click_recommend_situation</string>
    <string name="date">date</string>
    <string name="goal">goal</string>
    <string name="click_create_mission">click_create_mission</string>
    <string name="complete_create_mission">complete_create_mission</string>
    <string name="appear_same_mission_issue_message">appear_same_mission_issue_message</string>
    <string name="appear_maxed_issue_message">appear_maxed_issue_message</string>
    <string name="view_update_mission">view_update_mission</string>
    <string name="click_update_mission">click_update_mission</string>
    <string name="complete_update_mission">complete_update_mission</string>
    <string name="mission_desc">어떤 낫투두를 실천할까요?</string>
    <string name="max_text_size_20">%d/20</string>
    <string name="situation_desc">위 낫투두를\n어떤 상황에서 실천할까요?</string>
    <string name="action_desc">어떤 방법으로\n낫투두에 도전할까요?</string>
    <string name="goal_desc">낫투두를 통해서\n어떤 목표를 이루려 하나요?</string>
    <string name="ex_mission_youtube">낫투두 - 유튜브 보지않기</string>
    <string name="ex_action_youtube">실천 방법 - 유튜브 프리미엄 구독 취소\n실천 방법 - 공부 중에 가방 안에 핸드폰 넣기</string>
    <string name="ex_mission_work_out">운동 중 20분 이상 쉬지 않기</string>
    <string name="ex_goal_work_out">근손실 막고 근육량 늘리기</string>
    <string name="complete_create_nottodo">낫투두 생성 완료 !</string>
    <string name="addition_action_2_text">%s\n%s</string>
    <string name="addition_action_3_text">%s\n%s\n%s</string>
    <string name="cd_delete_addition_view">낫투두 생성 창 닫기</string>
    <string name="addition_create_nottodo">낫투두 생성</string>
    <string name="add">추가</string>
    <string name="date_kor">날짜</string>
    <string name="complete_kor">완료</string>
    <string name="when_nottodo_date">언제 낫투두를 실천할까요?</string>
    <string name="addition_date_guide">*달성 가능한 계획을 위해 다가올 일주일만 선택할 수 있어요</string>
    <string name="nottodo_kor">낫투두</string>
    <string name="cd_mission_check">낫투두 설정 완료</string>
    <string name="nottodo_guide">낫투두는 \'~않기\'로 작성하면 더 쉬워요.</string>
    <string name="text_watcher_init">0/20</string>
    <string name="nottodo_history">낫투두 입력 기록</string>
    <string name="situation_kor">상황</string>
    <string name="cd_nottodo_calendar_open">낫투두 날짜 캘린더 열기</string>
    <string name="cd_situation_check">상황 설정 완료</string>
    <string name="cd_action_check">실천방법 설정 완료</string>
    <string name="cd_goal_check">목표 설정 완료</string>
    <string name="recommend_situation">추천 상황</string>
    <string name="action_kor">실천방법</string>
    <string name="cd_delete_first_action">첫 번째 실천방법 제거</string>
    <string name="cd_onboard_indicator">현재 온보딩 섹션 표시 아이콘</string>
    <string name="my_life">나의 일상</string>
    <string name="onboard_fourth_title">하루 중 어느 순간을\n가장 개선하고 싶으세요?</string>
    <string name="onboard_fourth_desc">여러 개 선택할 수 있어요</string>
    <string name="onboard_fourth_btn">사용법이 궁금해요</string>
    <string name="notification_permission_request_title">알림을 허용하면\n낫투두가 더 잘 도울 수 있어요!</string>
    <string name="cd_bell_icon">알림 모양 아이콘</string>
    <string name="notification_permission_request_dialog_title">\'낫투두\'에서 알림을 보내도록 허용하시겠습니까?</string>
    <string name="notification_permission_request_dialog_desc">알림 기능이 꺼져있으면\n알람이 울릴 때까지 확인하기 어려워요</string>
    <string name="agree">허용</string>
    <string name="disagree">허용 안함</string>
    <string name="notification_permission_request_complete">네, 알겠어요 :)</string>
    <string name="common_dialog_title">오픈채팅으로\n일일 인증 하고\n갓생살자!</string>
    <string name="common_dialog_desc">매주 추첨을 통해 스타벅스 기프티콘을 드려요</string>
    <string name="common_dialog_button_text">이정도야 쉽지!</string>
    <string name="do_not_look_anymore">더 이상 보지 않기</string>
    <string name="close">닫기</string>
    <string name="cd_do_not_look_anymore_checkbox">더 이상 보지 않기 체크박스</string>
</resources>