<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/iv_onboard_fourth_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/cd_onboard_indicator"
        android:src="@drawable/ic_tutorial_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_onboard_fourth_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/my_life"
        android:textAppearance="@style/R15"
        android:textColor="@color/green_3_8ae49a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_onboard_fourth_indicator" />

    <TextView
        android:id="@+id/tv_onboard_fourth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="49dp"
        android:text="@string/onboard_fourth_title"
        android:textAppearance="@style/M20"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboard_fourth_indicator" />

    <TextView
        android:id="@+id/tv_onboard_fourth_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/onboard_fourth_desc"
        android:textAppearance="@style/R14"
        android:textColor="@color/gray_4_9398aa"
        app:layout_constraintStart_toStartOf="@id/tv_onboard_fourth_title"
        app:layout_constraintTop_toBottomOf="@id/tv_onboard_fourth_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_onboard_fourth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_onboard_fourth_complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboard_fourth_desc"
        app:spanCount="2"
        tools:listitem="@layout/item_onboard_fourth" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_onboard_fourth_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_solid_gray_2_radius_50"
        android:paddingVertical="14dp"
        android:text="@string/onboard_fourth_btn"
        android:textAppearance="@style/Sb16"
        android:textColor="@color/gray_4_9398aa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>